syntax = "proto3";

option csharp_namespace = "ED.Keystore";

package keystore;

import "google/protobuf/empty.proto";

service Keystore {
  rpc CreateRsaKey (google.protobuf.Empty) returns (CreateRsaKeyResponse);
  rpc EncryptWithRsaKey (EncryptWithRsaKeyRequest) returns (EncryptWithRsaKeyResponse);
  rpc DecryptWithRsaKey (DecryptWithRsaKeyRequest) returns (DecryptWithRsaKeyResponse);
}

message RsaKey {
  string provider = 1;
  string key_name = 2;
  string oaep_padding = 3;
}

message CreateRsaKeyResponse {
  RsaKey key = 1;
}

message EncryptWithRsaKeyRequest {
  RsaKey key = 1;
  bytes plaintext = 2;
}

message EncryptWithRsaKeyResponse {
  bytes encrypted_data = 1;
}

message DecryptWithRsaKeyRequest {
  RsaKey key = 1;
  bytes encrypted_data = 2;
}

message DecryptWithRsaKeyResponse {
  bytes plaintext = 1;
}